test/nl/formats/liberty/benchmarks/errors/bundle_extra_member_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      members (D0);
      pin (D0) {
        direction : input;
      }
      pin (D1) {
        direction : input;
      }
    }
  }
}
